# pointcloud_colour_registration

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/colour_registration/: colour_registration_st.h
launch/: colour_registration.launch
src/: colour_registration_node.cpp  colour_registration_st.cpp
